// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect should escape items in menu 1`] = `

<div class="list__tile__title">
  &lt;strong&gt;foo&lt;/strong&gt;
</div>

`;

exports[`VSelect should only show items if they are in items 1`] = `

<div class="v-input v-select v-input--text v-input--is-label-active v-input--is-dirty">
  <div class="v-input__control">
    <div class="v-input__wrapper primary--text"
         style="height: 32px;"
    >
      <div class="menu"
           style="display: inline-block;"
      >
        <div class="menu__activator">
          <div class="v-select__slot">
            <label class="v-label v-label--active"
                   style="left: 0px; position: absolute;"
            >
            </label>
            <div class="v-select__selection">
              foo
            </div>
            <input tabindex="0"
                   type="text"
            >
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i aria-hidden="true"
                   class="icon material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should only show items if they are in items 2`] = `

<div class="v-input v-select v-input--text">
  <div class="v-input__control">
    <div class="v-input__wrapper primary--text"
         style="height: 32px;"
    >
      <div class="menu"
           style="display: inline-block;"
      >
        <div class="menu__activator">
          <div class="v-select__slot">
            <label class="v-label"
                   style="left: 0px; position: absolute;"
            >
            </label>
            <input tabindex="0"
                   type="text"
            >
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i aria-hidden="true"
                   class="icon material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should only show items if they are in items 3`] = `

<div class="v-input v-select v-input--text v-input--is-label-active v-input--is-dirty">
  <div class="v-input__control">
    <div class="v-input__wrapper primary--text"
         style="height: 32px;"
    >
      <div class="menu"
           style="display: inline-block;"
      >
        <div class="menu__activator">
          <div class="v-select__slot">
            <label class="v-label v-label--active"
                   style="left: 0px; position: absolute;"
            >
            </label>
            <div class="v-select__selection">
              bar
            </div>
            <input tabindex="0"
                   type="text"
            >
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i aria-hidden="true"
                   class="icon material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should only show items if they are in items 4`] = `

<div class="v-input v-select v-input--text v-input--is-label-active v-input--is-dirty">
  <div class="v-input__control">
    <div class="v-input__wrapper primary--text"
         style="height: 32px;"
    >
      <div class="menu"
           style="display: inline-block;"
      >
        <div class="menu__activator">
          <div class="v-select__slot">
            <label class="v-label v-label--active"
                   style="left: 0px; position: absolute;"
            >
            </label>
            <div class="v-select__selection">
              foo,
            </div>
            <div class="v-select__selection">
              bar
            </div>
            <input tabindex="0"
                   type="text"
            >
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i aria-hidden="true"
                   class="icon material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should render v-select correctly when not using scope slot 1`] = `

<div class="v-input v-select v-input--text">
  <div class="v-input__control">
    <div class="v-input__wrapper primary--text"
         style="height: 32px;"
    >
      <div class="menu"
           style="display: inline-block;"
      >
        <div class="menu__activator">
          <div class="v-select__slot">
            <label class="v-label"
                   style="left: 0px; position: absolute;"
            >
            </label>
            <input tabindex="0"
                   type="text"
            >
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i aria-hidden="true"
                   class="icon material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should render v-select correctly when not using v-list-tile in item scope slot 1`] = `

<div class="v-input v-select v-input--text">
  <div class="v-input__control">
    <div class="v-input__wrapper primary--text"
         style="height: 32px;"
    >
      <div class="menu"
           style="display: inline-block;"
      >
        <div class="menu__activator">
          <div class="v-select__slot">
            <label class="v-label"
                   style="left: 0px; position: absolute;"
            >
            </label>
            <input tabindex="0"
                   type="text"
            >
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i aria-hidden="true"
                   class="icon material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect should render v-select correctly when using v-list-tile in item scope slot 1`] = `

<div class="v-input v-select v-input--text">
  <div class="v-input__control">
    <div class="v-input__wrapper primary--text"
         style="height: 32px;"
    >
      <div class="menu"
           style="display: inline-block;"
      >
        <div class="menu__activator">
          <div class="v-select__slot">
            <label class="v-label"
                   style="left: 0px; position: absolute;"
            >
            </label>
            <input tabindex="0"
                   type="text"
            >
            <div class="v-input__append-inner">
              <div class="v-input__icon v-input__icon--append">
                <i aria-hidden="true"
                   class="icon material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>

`;
